# faster-sam

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  readthedocs.yaml  requirements-dev.txt  template.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  conf.py  faster_sam.adapter.rst  faster_sam.cache.cache_interface.rst  faster_sam.cache.redis_cache.rst  faster_sam.cache.rst  faster_sam.cloudformation.rst  faster_sam.cmd.faster.rst  faster_sam.cmd.rst  faster_sam.dependencies.events.rst  faster_sam.dependencies.rst  faster_sam.lambda_event.rst  faster_sam.middleware.rst  faster_sam.middlewares.bucket_path_rewriter.rst  faster_sam.middlewares.lambda_authorizer.rst  faster_sam.middlewares.queue_path_rewriter.rst  faster_sam.middlewares.remove_path.rst  faster_sam.middlewares.rst  faster_sam.openapi.rst  faster_sam.routing.rst  faster_sam.rst  faster_sam.utils.rst  faster_sam.web_identity_providers.rst  index.rst  modules.rst
faster_sam/: __init__.py  adapter.py  cache.py  cloudformation.py  envs.py  helpers.py  lambda_event.py  middleware.py  openapi.py  protocols.py  responses.py  routing.py  schemas.py  utils.py  web_identity_providers.py
faster_sam/cache/: cache_interface.py  interface.py  redis.py  redis_cache.py
faster_sam/cmd/: faster.py
faster_sam/dependencies/: events.py  helpers.py
faster_sam/middleware/: __init__.py  remove_path.py
faster_sam/middlewares/: authorize.py  bucket_path_rewriter.py  lambda_authorizer.py  queue_path_rewriter.py  remove_path.py  (+1 more)
middleware/: __init__.py
src/: adapter.py  cloudformation.py  openapi.py  routing.py
tests/: template.yaml  test_adapter.py  test_cloudformation.py  test_cmd_faster.py  test_dependencies_events.py  test_dummy.py  test_helpers.py  test_lambda_event.py  test_middleware.py  test_middleware_bucket_path_rewriter.py  test_middleware_lambda_authorizer.py  test_middleware_queue_path_rewriter.py  test_middleware_remove_path.py  test_middleware_rewrite_path.py  test_openapi.py  test_redis.py  test_routing.py  test_schemas.py  test_utils.py  test_web_identity_providers.py
(+13 files in other folders)
