[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "faster-sam"
version = "0.7.0"
description = "An adapter to enable running APIs built with AWS SAM applications using FastAPI."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Dotz Developers", email = "devs-dotz@dotz.com"},
]
license = {text = "MIT"}
keywords = ["utilities", "fastapi", "sam"]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "PyYAML",
]

[project.optional-dependencies]
auth = ["boto3", "requests"]
redis = ["redis"]
